--- a/MatchingUtilities/Views/Match/Index.cshtml
+++ b/MatchingUtilities/Views/Match/Index.cshtml
@@ -1,5 +1,12 @@
-﻿@*
+﻿@model MatchingUtilities.Models.MatchViewModel
+@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    foreach (var grej in Model.SjukaGrejer)
+    {
+
+    }
+    @Model.DunderSiffran
+    @Model.User.UserName
 }
